--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "framer-motion": "^7.5.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
-    "react-svg-connector": "^1.0.9",
-    "styled-components": "^5.3.6"
+    "react-svg-connector": "^1.0.9"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
